tests/ui/macros/macro-attribute.rs
#[doc = $not_there] //~ ERROR expected expression, found `$`
fn main() { }

// ferrocene-annotations: fls_63v1fqedzwfd
// Attribute doc
